--- a/database/Postgres/pg17_docs/Ch36_Extending_SQL/36.10_C_Language_Functions.md
+++ b/database/Postgres/pg17_docs/Ch36_Extending_SQL/36.10_C_Language_Functions.md
@@ -14,6 +14,8 @@
 >   * 36.10.10.1. Requesting Shared Memory at Startup
 >   * 36.10.10.2. Requesting Shared Memory After Startup
 > * 36.10.11. LWLocks  
+>   * 36.10.11.1. Requesting LWLocks at Startup
+>   * 36.10.11.2. Requesting LWLocks After Startup
 > * 36.10.12. Custom Wait Events  
 > * 36.10.13. Injection Points  
 > * 36.10.14. Using C++ for Extensibility  
@@ -948,6 +950,17 @@ return_composite(PG_FUNCTION_ARGS)
    LANGUAGE C STRICT;
    ```
    
+   ```sql
+   steve=# select tuple_sequence(4);
+   tuple_sequence 
+   ----------------
+   (0,0)
+   (1,1)
+   (2,2)
+   (3,3)
+   (4 rows)
+   ```
+   
 # 36.10.9. Polymorphic Arguments and Return Types
 
 1. The type of the arguments and return value of a polymorphic function is 
@@ -1004,17 +1017,158 @@ return_composite(PG_FUNCTION_ARGS)
    3. Set up the hook in `_PG_init()`:
    
       ```c
-      shmem_request_hook = my_extension_shmem_request_hook;
-      
-      /* Or you can use:
-       * 
-       * shmem_request_hook = &my_extension_shmem_request_hook;
-       *
-       * Both &my_extension_shmem_request_hook and my_extension_shmem_request_hook
-       * resolve to the address of our custom request hook function. (I don't quite 
-       * love this C feature)
-       */
+      void
+      _PG_init(void) 
+      {
+          if (!process_shared_preload_libraries_in_progress) {
+              ereport(ERROR, errmsg("extension has not been preloaded"),
+                            errhint("`shared_preload_libraries` should list `my_extension`"));
+              
+              return;
+          }
+          
+          shmem_request_hook = my_extension_shmem_request_hook;
+          shmem_startup_hook = my_extension_shmem_startup_hook;
+          
+          /* Or you can use:
+           * 
+           * shmem_request_hook = &my_extension_shmem_request_hook;
+           *
+           * Both &my_extension_shmem_request_hook and my_extension_shmem_request_hook
+           * resolve to the address of our custom request hook function. (I don't quite 
+           * love this C feature)
+           */
+      }
       ```
-      
 
-## 36.10.10.2. Requesting Shared Memory After Startup
+2. Initialize the shared memory in `shmem_startup_hook`
+
+   ```c
+   void 
+   my_extension_shmem_startup_hook(void) 
+   {
+       bool already_inited_by_another_backend;
+       
+       // take an exclusive lock on the AddinShmemInitLock lock so that backend 
+       // processes won't init this concurrently to cause race condition.
+       // 
+       // NOTE: Lock AddinShmemInitLock is provided by Postgres, you do not need
+       // to allocate it yourself.
+       LWLockAcquire(AddinShmemInitLock, LW_EXCLUSIVE); 
+       ptr = ShmemInitStruct("my struct name", size, &already_inited_by_another_backend);
+       if (!already_inited_by_another_backend)
+       {
+           /* initialize contents of shared memory */
+       } 
+       LWLockRelease(AddinShmemInitLock);
+   }
+   ```
+   
+   This hook should be registered in `_PG_init()` as well, see the above code.
+
+## 36.10.10.2. Requesting **Dynamic** Shared Memory After Startup
+
+```c
+/*
+ * Initialize or attach a named DSM segment.
+ *
+ * This routine returns the address of the segment.  init_callback is called to
+ * initialize the segment when it is first created.
+ */
+void *
+GetNamedDSMSegment(const char *name, size_t size,
+				   void (*init_callback) (void *ptr), bool *found)
+```
+
+Extensions can request shared memory after server startup using the above 
+function. There is no need to use LWLock to avoid races when using it as 
+Postgres will guarantee that for us.
+
+If a **dynamic** shared memory segment with the given name does not yet exist, this 
+function will allocate it and initialize it with the provided `init_callback`
+callback function. If the segment has already been allocated and initialized by 
+another backend, this function simply attaches the existing dynamic shared memory 
+segment to the current backend.
+
+The `ptr` argument in `init_callback` is the pointer to the allocated memory.
+
+# 36.10.11. LWLocks 
+
+## 36.10.11.1. Requesting LWLocks at Startup
+
+Similar to reserving shared memory, we should add the extension dynamic object 
+to `shared_preload_libraries` and request LwLocks in the `shmem_request_hook`.
+
+In your `shmem_request_hook`, use `RequestNamedLWLockTranche()` to ask the 
+postmaster to allocate `num_lwlocks` LWLocks under the name `tranche_name`.
+
+```c
+/*
+ * RequestNamedLWLockTranche
+ *		Request that extra LWLocks be allocated during postmaster
+ *		startup.
+ *
+ * This may only be called via the shmem_request_hook of a library that is
+ * loaded into the postmaster via shared_preload_libraries.  Calls from
+ * elsewhere will fail.
+ *
+ * The tranche name will be user-visible as a wait event name, so try to
+ * use a name that fits the style for those.
+ */
+void
+RequestNamedLWLockTranche(const char *tranche_name, int num_lwlocks)
+```
+
+Later, in your `shmem_startup_hook`, you can access these `num_lwlocks` LWLocks
+using:
+
+```c
+/*
+ * GetNamedLWLockTranche - returns the base address of LWLock from the
+ *		specified tranche.
+ *
+ * Caller needs to retrieve the requested number of LWLocks starting from
+ * the base lock address returned by this API.  This can be used for
+ * tranches that are requested by using RequestNamedLWLockTranche() API.
+ */
+LWLockPadded *
+GetNamedLWLockTranche(const char *tranche_name)
+```
+
+The return value is an array of length `num_lwlocks`.
+
+> What is tranche
+>
+> Tranche is group of LWLocks, it has a name as well as an ID associated with it.
+> The primary purpose of tranche is for monitoring and debugging. 
+> `RequestNamedLWLockTranche()` allocates `num_lwlocks` under tranche `tranche_name`.
+
+## 36.10.11.2. Requesting LWLocks After Startup 
+
+> These APIs allocate locks in dynamic shared memory
+
+First you should obtain a tranche ID:
+
+```c
+int LWLockNewTrancheId(void)
+```
+
+Then you should initialize a lock using this ID:
+
+```c
+// void LWLockInitialize(LWLock *lock, int tranche_id)
+
+LwLock lockbuf;
+LWLockInitialize(&lockbuf, tranche_id)
+```
+
+Unsafe: we should ensure only 1 process allocates a new `tranche_id` and initializes
+it with a new LWLOCK.
+
+Then, we can give this tranche a name:
+
+```c
+void LWLockRegisterTranche(int tranche_id, const char *tranche_name)
+```
+
+# 36.10.12. Custom Wait Events
