--- a/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -1,12 +1,143 @@
 # Components of a Query tree (struct Query)
 
-* range table: a list of relations used in the query.  For `SELECT`, these are 
-  relations after the `FROM` keyword.
+* commandType: type of command (select/update/insert/delete/merge/utility)
+
+* querySource: where did this querytree come from? Typically, there are 2 sources
+  of `struct Query`s:
+
+  1. Original query
+  2. Created by the Rule/Rewriter
+
+  Then for the ones created by the rewriter, it can be categorized into:
+
+  ```c
+	QSRC_INSTEAD_RULE: 1			  /* added by unconditional INSTEAD rule */
+	QSRC_QUAL_INSTEAD_RULE: 2		/* added by conditional INSTEAD rule */
+	QSRC_NON_INSTEAD_RULE: 3		/* added by non-INSTEAD rule */
+  ```
+
+* queryId: unique identifier for a query
+
+* canSetTag: In PG protocol, when a query is complete, Postgres server (the backend)
+  will set a command tag to indicate the completion, and expose some information.
+
+  > https://www.postgresql.org/docs/current/protocol-message-formats.html
+  >
+  > The command tag. This is usually a single word that identifies which SQL 
+  > command was completed. 
+
+  A single user query can be rewritten to multiple querytrees, one of which needs to
+  set this command tag.  This field specifies if the current `struct Query` would do
+  that.
+
+* utilityStmt: If this query is a utility command, this field is a pointer to 
+  a utility statement.  Otherwise, it is NULL.
 
 * result relation: the table to which the query result will go. Identified by
   the index number in the range table list. 0 for `SELECT` statements.
-  
-* target list: a list of expr that define the query result
+
+* hasAggs: If this query contains aggregations in target list or having clause
+
+  ```sql
+  SELECT city, count(*), max(temp_lo)
+  FROM weather
+  GROUP BY city
+  HAVING max(temp_lo) < 40;
+  ```
+
+  `max(temp_lo)` appears in both target list and having clause
+
+* hasWindowFuncs: if this query contains window functions in the target list
+
+* hasTargetSRF: if this query contains set-returning function
+
+  > SRF: is postgres functions that could return multiple rows.
+  >
+  > See database/Postgres/pg17_docs/Ch36_Extending_SQL/36.10_C_Language_Functions.md
+
+* hasSubLinks: if this query contains sublinks
+
+* hasDistinctOn: if this query contains `DISTINCT ON` (NOT `DISTINCT`)
+
+  ```sql
+  -- Different from DISTINCT, this Only ensures uniqueness on column "name" 
+  SELECT DISTINCT ON (name) name, subject, score
+  FROM student_scores
+  ORDER BY name, score DESC;
+  ```
+
+* hasRecursive: if SQL contains `WITH RECURSIVE`
+
+  ```sql
+  WITH RECURSIVE cte_table (id) 
+  AS ( SELECT id FROM foo)
+  SELECT * FROM cte_table;
+  ```
+
+* hasModifyingCTE: True if this query contains CTE and the CTE query modifies 
+  something
+
+  ```sql
+  WITH RECURSIVE cte_procedure 
+  -- See this RETURNING clause, it returns the newly-inserted id value, and we 
+  -- can select from it!
+  AS (INSERT INTO foo VALUES (99) RETURNING id) 
+  SELECT * FROM cte_procedure;
+  ```
+
+* hasForUpdate: Whether this SQL contains `FOR UPDATE` or `FOR SHARE`
+
+
+  > https://www.postgresql.org/docs/current/explicit-locking.html#LOCKING-ROWS
+
+* hasRowSecurity: rewriter has applied some row-level security policy 
+
+  > https://www.postgresql.org/docs/current/ddl-rowsecurity.html
+
+* hasGroupRTE: if this query contains a RTE_GROUP range table entry
+
+* isReturn: For PL/pgSQL, if this query is a `RETURN` statement. Should always be 
+  false for plain SQL.
+
+* cteList: list of common table expressions:
+
+  > List<CommonTableExpr>
+
+  ```sql
+  with recursive 
+    cte1 as ()
+    cte2 as ()
+    cte3 as ()
+  ```
+
+* rTable: a list of relations used in the query.  For `SELECT`, these are 
+  relations after the `FROM` keyword.
+
+  > List<RangeTblEntry>
+
+* rteperminfos: list of RTEPermissionInfo nodes for the rtable entries having
+	perminfoindex > 0
+
+  > List<RTEPermissionInfo>
+
+* jointree: table join tree (FROM and WHERE clauses); also USING clause for MERGE
+
+* mergeActionList: Only set for `MERGE` command, list of actions for `MERGE`
+
+  > List<MergeAction>
+
+* mergeTargetRelation: Only set for `Merge` command, 0 otherwise.  Index of the 
+
+  mergeTargetRelation is a pointer (an index into the range table) that tells 
+  the MERGE executor the table you want to modify.
+
+* mergeJoinCondition: Only set for `Merge` command, NULL otherwise.  
+
+  > type: Expr or subtype, like BooleanExpr
+
+* targetList: a list of expr that define the query result
+
+  > List<TargetEntry>
   
   * For SELECT: projection, `*` is a special abbreviation that will be expaned
     by the analyzer.
@@ -28,8 +159,54 @@
   * INSERT 
   * DELETE
   * UPDATE
-  
-* join tree: `FROM` and `WHERE` clause
 
-  > QUES: range table also contains data from the `FROM` clause, any difference
-  > between these 2?
+* override: If this query contains a `OVERRIDING` clause. If so, what is its kind:
+
+  * OVERRIDING_USER_VALUE,
+	* OVERRIDING_SYSTEM_VALUE,
+
+  ```sql
+  INSERT INTO my_table (id, name) 
+  OVERRIDING SYSTEM VALUE 
+  VALUES (1, 'Alice');
+  ```
+
+* onConflict: If the SQL is an `INSERT` and contains an `ON CONFLICT DO` clause, this 
+  field stores that clause.
+
+  > Postgres does not support `UPSERT` before 15, `ON CONFLICT DO` is an alternative 
+  > to that
+
+* returningOldAlias
+* returningNewAlias
+* returningList
+
+* groupClause: `GROUP BY` clause
+
+* groupDistinct: QUES: I am not sure about this
+* groupingSets: QUES: I am not sure about this
+
+* havingQual: `HAVING` clause
+
+* windowClause
+
+* distinctClause: DISTINCT or DISTINCT ON clause
+
+* sortClause: ORDER BY
+
+* limitOffset: OFFSET X
+
+* limitCount: LIMIT x
+
+* limitOption
+
+* rowMarks
+
+* setOperations: set-operation tree if this is top level of a UNION/INTERSECT/EXCEPT query 
+
+* constraintDeps: 
+
+* withCheckOptions 
+
+* stmt_location: start offset of the statement in the SQL string
+* stmt_len: len of this statement
