--- a/database/Postgres/pg17_docs/Ch15_Parallel_Query/15.1_How_Parallel_Query_Works.md
+++ b/database/Postgres/pg17_docs/Ch15_Parallel_Query/15.1_How_Parallel_Query_Works.md
@@ -1,5 +1,5 @@
 1. When Postgres thinks a query can be run in parallel, it creates a `Gather` or 
-   `Gather Merge` node in the plan.  the operations below this node will be run
+   `Gather Merge` node in the plan.  The operations below this node will be run
    in parallel by the chosen workers as well as the leader (the backend process)
 
 2. When the parallel portion only generates a small number of tuples, the leader
