--- a/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -200,7 +200,7 @@
 
 * limitOption
 
-* rowMarks
+* rowMarks: (could be wrong) a mechanism to implement row-level locks
 
 * setOperations: set-operation tree if this is top level of a UNION/INTERSECT/EXCEPT query 
 
