--- a/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -33,8 +33,8 @@
 * utilityStmt: If this query is a utility command, this field is a pointer to 
   a utility statement.  Otherwise, it is NULL.
 
-* result relation: the table to which the query result will go. Identified by
-  the index number in the range table list. 0 for `SELECT` statements.
+* resultRelation (RT index, int): the table to which the query result will go. 
+  Identified by the index number in the range table list. 0 for `SELECT` statements.
 
 * hasAggs: If this query contains aggregations in target list or having clause
 
@@ -110,10 +110,14 @@
     cte3 as ()
   ```
 
-* rTable: a list of relations used in the query.  For `SELECT`, these are 
+* rTable (List<RangeTblEntry>): a list of relations used in the query.  For `SELECT`, these are 
   relations after the `FROM` keyword.
 
-  > List<RangeTblEntry>
+  Only **explicit JOIN syntax** produces an RTE, not the implicit join resulting from multiple 
+  FROM items.  This is because we only need the RTE to deal with SQL features like "outer joins"
+  and "join-output-column aliasing".  
+
+  > QUES: I currently don't understand the reason explained above.
 
 * rteperminfos: list of RTEPermissionInfo nodes for the rtable entries having
 	perminfoindex > 0
@@ -121,6 +125,14 @@
   > List<RTEPermissionInfo>
 
 * jointree: table join tree (FROM and WHERE clauses); also USING clause for MERGE
+
+  Difference between `rTable` and `jointree`: rTable is a flat structure, `jointree`
+  is a tree structure, it describes the relationships between the table entries 
+  stored in `jointree`, and it references those table entries using RT indexes.
+
+  A table can appear multiple times in a query, by splitting it and its reference/usage,
+  we can only store it once (in `rTable`) and reference it for multiple times.
+
 
 * mergeActionList: Only set for `MERGE` command, list of actions for `MERGE`
 
