--- a/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -198,7 +198,8 @@
 * groupDistinct: QUES: I am not sure about this
 * groupingSets: QUES: I am not sure about this
 
-* havingQual: `HAVING` clause
+
+* havingQual (List<Node>, too generic?): `HAVING` clause
 
 * windowClause
 
@@ -218,7 +219,74 @@
 
 * constraintDeps: 
 
-* withCheckOptions 
+* withCheckOptions (List<WithCheckOption>): This field will be initialized by 
+  the rewriter. It can be 2 things:
+
+  1. `WITH CHECK OPTION` checks that will be applied to new tuples when inserting
+     or updating an auto-updatable view
+     
+     ```c
+     typedef enum WCOKind
+     {
+         WCO_VIEW_CHECK,				/* WCO on an auto-updatable view */
+
+         // ...
+     } WCOKind;
+     ```
+
+     ```sql
+     create table numbers (num int, is_positive bool);
+     create view positive_numbers as (select * from numbers where is_positive) WITH CHECK OPTION;
+
+     -- Since this field will be populated by the rewriter, you have to use this option
+     set debug_print_rewritten = true;
+     insert into positive_numbers values (-1, false);
+     ERROR:  new row violates check option for view "positive_numbers"
+     :withCheckOptions (
+       {WITHCHECKOPTION 
+          :kind 0 
+          :relname positive_numbers 
+          :polname <> 
+          :qual 
+              {VAR 
+              :varno 2 
+              :varattno 2 
+              :vartype 16 
+              :vartypmod -1 
+              :varcollid 0 
+              :varnullingrels (b)
+              :varlevelsup 0 
+              :varreturningtype 0 
+              :varnosyn 2 
+              :varattnosyn 2 
+              :location -1
+              }
+          :cascaded true
+       }
+     )
+     ```
+ 
+     It rejects writes that do not satisfy the qualification. For a view without 
+     this `WITH CHECK OPTION`, these writes will be accepted, but you won't see
+     these tuples in `select * from positive_number_without_with_check_option`
+     since they do not satisfy the option.
+      
+
+  2. `RLS WITH CHECK` policies to be applied when inserting/updating a relation 
+     with RLS.
+
+     ```c
+     typedef enum WCOKind
+     {
+        // ...
+
+        WCO_RLS_INSERT_CHECK,		/* RLS INSERT WITH CHECK policy */
+        WCO_RLS_UPDATE_CHECK,		/* RLS UPDATE WITH CHECK policy */
+        WCO_RLS_CONFLICT_CHECK,		/* RLS ON CONFLICT DO UPDATE USING policy */
+        WCO_RLS_MERGE_UPDATE_CHECK, /* RLS MERGE UPDATE USING policy */
+        WCO_RLS_MERGE_DELETE_CHECK, /* RLS MERGE DELETE USING policy */
+     } WCOKind;
+     ```
 
 * stmt_location: start offset of the statement in the SQL string
 * stmt_len: len of this statement
