--- a/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -273,7 +273,7 @@
       
 
   2. `RLS WITH CHECK` policies to be applied when inserting/updating a relation 
-     with RLS.
+     with RLS (row-level security).
 
      ```c
      typedef enum WCOKind
