--- a/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -99,9 +99,7 @@
 * isReturn: For PL/pgSQL, if this query is a `RETURN` statement. Should always be 
   false for plain SQL.
 
-* cteList: list of common table expressions:
-
-  > List<CommonTableExpr>
+* cteList (List<CommonTableExpr>): list of common table expressions:
 
   ```sql
   with recursive 
@@ -113,9 +111,9 @@
 * rTable (List<RangeTblEntry>): a list of relations used in the query.  For `SELECT`, these are 
   relations after the `FROM` keyword.
 
-  Only **explicit JOIN syntax** produces an RTE, not the implicit join resulting from multiple 
+  Only **explicit JOIN syntax** produces a join RTE, not the implicit join resulting from multiple 
   FROM items.  This is because we only need the RTE to deal with SQL features like "outer joins"
-  and "join-output-column aliasing".  
+  and "join-output-column aliasing". And, `MERGE` command produces `RTE_JOIN` as well. 
 
   > QUES: I currently don't understand the reason explained above.
 
@@ -134,9 +132,122 @@
   we can only store it once (in `rTable`) and reference it for multiple times.
 
 
-* mergeActionList: Only set for `MERGE` command, list of actions for `MERGE`
+* mergeActionList (List<MergeAction>): Only set for `MERGE` command, list of actions for `MERGE`
 
-  > List<MergeAction>
+  ```sql
+  postgres=# select * from foo;
+  id | description 
+  ----+-------------
+    1 | one
+  (1 row)
+
+  postgres=# select * from bar;
+  id | description 
+  ----+-------------
+    1 | 一
+    2 | 二
+  (2 rows)
+
+  postgres=*# merge into foo 
+  postgres-*# using bar
+  postgres-*# on foo.id=bar.id
+  postgres-*# when matched then
+  postgres-*#   update set description = bar.description
+  postgres-*# when not matched then
+  postgres-*#   insert (id, description) values (bar.id, bar.description);
+  ```
+
+  ```text
+  :mergeActionList (
+    {MERGEACTION 
+    :matchKind 0 
+    :commandType 2 
+    :override 0 
+    :qual <> 
+    :targetList (
+        {TARGETENTRY 
+        :expr 
+          {VAR 
+          :varno 2 
+          :varattno 2 
+          :vartype 25 
+          :vartypmod -1 
+          :varcollid 100 
+          :varnullingrels (b)
+          :varlevelsup 0 
+          :varreturningtype 0 
+          :varnosyn 2 
+          :varattnosyn 2 
+          :location 87
+          }
+        :resno 2 
+        :resname description 
+        :ressortgroupref 0 
+        :resorigtbl 0 
+        :resorigcol 0 
+        :resjunk false
+        }
+    )
+    :updateColnos <>
+    }
+    {MERGEACTION 
+    :matchKind 2 
+    :commandType 3 
+    :override 0 
+    :qual <> 
+    :targetList (
+        {TARGETENTRY 
+        :expr 
+          {VAR 
+          :varno 2 
+          :varattno 1 
+          :vartype 23 
+          :vartypmod -1 
+          :varcollid 0 
+          :varnullingrels (b)
+          :varlevelsup 0 
+          :varreturningtype 0 
+          :varnosyn 2 
+          :varattnosyn 1 
+          :location 160
+          }
+        :resno 1 
+        :resname id 
+        :ressortgroupref 0 
+        :resorigtbl 0 
+        :resorigcol 0 
+        :resjunk false
+        }
+        {TARGETENTRY 
+        :expr 
+          {VAR 
+          :varno 2 
+          :varattno 2 
+          :vartype 25 
+          :vartypmod -1 
+          :varcollid 100 
+          :varnullingrels (b)
+          :varlevelsup 0 
+          :varreturningtype 0 
+          :varnosyn 2 
+          :varattnosyn 2 
+          :location 168
+          }
+        :resno 2 
+        :resname description 
+        :ressortgroupref 0 
+        :resorigtbl 0 
+        :resorigcol 0 
+        :resjunk false
+        }
+    )
+    :updateColnos <>
+    }
+  )
+  ```
+
+ 
+
 
 * mergeTargetRelation: Only set for `Merge` command, 0 otherwise.  Index of the 
 
