--- a/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -108,7 +108,7 @@
     cte3 as ()
   ```
 
-* rTable (List<RangeTblEntry>): a list of relations used in the query.  For `SELECT`, these are 
+* rtable (List<RangeTblEntry>): a list of relations used in the query.  For `SELECT`, these are 
   relations after the `FROM` keyword.
 
   Only **explicit JOIN syntax** produces a join RTE, not the implicit join resulting from multiple 
@@ -122,15 +122,19 @@
 
   > List<RTEPermissionInfo>
 
-* jointree: table join tree (FROM and WHERE clauses); also USING clause for MERGE
+* jointree (FromExpr): 
+  
+  * table join tree (FROM and WHERE clauses); 
+  * also USING clause for MERGE, source relation, the `FromExpr.fromlist` will
+    have only 1 element, it could be of type `RangeTblRef` or `JoinExpr`. See
+    `transform_MERGE_to_join(parse)`
 
-  Difference between `rTable` and `jointree`: rTable is a flat structure, `jointree`
-  is a tree structure, it describes the relationships between the table entries 
-  stored in `jointree`, and it references those table entries using RT indexes.
+  Difference between `rtable` and `jointree`: rTable is a flat structure that stores
+  all the relations invoked, `jointree` references those table entries stored in
+  `rtable` using RT indexes.
 
   A table can appear multiple times in a query, by splitting it and its reference/usage,
-  we can only store it once (in `rTable`) and reference it for multiple times.
-
+  we can only store it once (in `rtable`) and reference it for multiple times.
 
 * mergeActionList (List<MergeAction>): Only set for `MERGE` command, list of actions for `MERGE`
 
@@ -249,10 +253,11 @@
  
 
 
-* mergeTargetRelation: Only set for `Merge` command, 0 otherwise.  Index of the 
+* mergeTargetRelation (int): Range table index to the merge target relation.
 
-  mergeTargetRelation is a pointer (an index into the range table) that tells 
-  the MERGE executor the table you want to modify.
+  Only set for MERGE query.
+  
+  > Where is source relation stored? It is stored in `jointree`
 
 * mergeJoinCondition: Only set for `Merge` command, NULL otherwise.  
 
