--- a/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg17_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -125,9 +125,11 @@
 * jointree (FromExpr): 
   
   * table join tree (FROM and WHERE clauses); 
-  * also USING clause for MERGE, source relation, the `FromExpr.fromlist` will
-    have only 1 element, it could be of type `RangeTblRef` or `JoinExpr`. See
-    `transform_MERGE_to_join(parse)`
+  * also source relation when it is a `MERGE` command, the `FromExpr.fromlist` 
+    will have only 1 element, it could be of type `RangeTblRef` or `JoinExpr`. 
+    See `transform_MERGE_to_join(parse)`. `FromExpr.quals` will be qualifications
+    on the **TARGET result** (not source relation), if target relation is an
+    auto-updatable view.
 
   Difference between `rtable` and `jointree`: rTable is a flat structure that stores
   all the relations invoked, `jointree` references those table entries stored in
@@ -258,6 +260,11 @@
   Only set for MERGE query.
   
   > Where is source relation stored? It is stored in `jointree`
+  
+  If target relation is a regular table, then `mergeTargetRelation` has the
+  same value as `resultRelation`. If target relation is a trigger-updatable
+  view, then it will be the expanded view subquery that we need to pull data
+  from.
 
 * mergeJoinCondition: Only set for `Merge` command, NULL otherwise.  
 
