--- a/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -55,7 +55,7 @@
   >
   > See database/Postgres/pg17_docs/Ch36_Extending_SQL/36.10_C_Language_Functions.md
 
-* hasSubLinks: if this query contains sublinks
+* hasSubLinks (bool): if this query contains sublinks
 
 * hasDistinctOn: if this query contains `DISTINCT ON` (NOT `DISTINCT`)
 
