--- a/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -57,6 +57,9 @@
 
 * hasSubLinks (bool): if this query contains sublinks
 
+  QUES: Since `pull_up_sublinks()` won't descend into subqueries, I highly doubt
+  this flag only applies to the current `Query`
+
 * hasDistinctOn: if this query contains `DISTINCT ON` (NOT `DISTINCT`)
 
   ```sql
