--- a/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -58,7 +58,8 @@
 * hasSubLinks (bool): if this query contains sublinks
 
   QUES: Since `pull_up_sublinks()` won't descend into subqueries, I highly doubt
-  this flag only applies to the current `Query`
+  this flag only applies to the current `Query`. Gemini agrees with me.
+  
 
 * hasDistinctOn: if this query contains `DISTINCT ON` (NOT `DISTINCT`)
 
@@ -341,7 +342,25 @@
 
 * rowMarks: (could be wrong) a mechanism to implement row-level locks
 
-* setOperations: set-operation tree if this is top level of a UNION/INTERSECT/EXCEPT query 
+* setOperations (SetOperationStmt): set-operation tree if this is top level of
+  a UNION/INTERSECT/EXCEPT query 
+  
+  ```sql
+  select * from foo 
+  union all 
+  select * from foo;
+  ```
+  
+  The above query will have 2 RTE_SUBQUERY rtes and its `setOperations` will be
+  
+  ```c
+  struct SetOperationStmt {
+    op: Union
+    all: trie
+    larg: RangeTblRef(1),
+    rarg: RangeTblRef(2),
+  }
+  ```
 
 * constraintDeps: 
 
