--- a/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -35,6 +35,8 @@
 
 * resultRelation (RT index, int): the table to which the query result will go. 
   Identified by the index number in the range table list. 0 for `SELECT` statements.
+  
+  This is also called target relation (when not talking about the `MERGE` command)
 
 * hasAggs: If this query contains aggregations in target list or having clause
 
@@ -91,7 +93,6 @@
 
 * hasForUpdate: Whether this SQL contains `FOR UPDATE` or `FOR SHARE`
 
-
   > https://www.postgresql.org/docs/current/explicit-locking.html#LOCKING-ROWS
 
 * hasRowSecurity: rewriter has applied some row-level security policy 
@@ -122,7 +123,7 @@
   > QUES: I currently don't understand the reason explained above.
 
 * rteperminfos: list of RTEPermissionInfo nodes for the rtable entries having
-	perminfoindex > 0
+  `RangeTblEntry.perminfoindex` > 0
 
   > List<RTEPermissionInfo>
 
@@ -340,7 +341,8 @@
 
 * limitOption
 
-* rowMarks: (could be wrong) a mechanism to implement row-level locks
+* rowMarks (List<RowMarkClause>): Parser output representation of `FOR [KEY] UPDATE/SHARE`
+  clauses
 
 * setOperations (SetOperationStmt): set-operation tree if this is top level of
   a UNION/INTERSECT/EXCEPT query 
