--- a/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -91,9 +91,25 @@
   SELECT * FROM cte_procedure;
   ```
 
-* hasForUpdate: Whether this SQL contains `FOR UPDATE` or `FOR SHARE`
+* hasForUpdate (bool): Whether this query contains **explicit**
 
-  > https://www.postgresql.org/docs/current/explicit-locking.html#LOCKING-ROWS
+  1. `FOR UPDATE`
+  2. `FOR NO KEY UPDATE`
+  3. `FOR SHARE`
+  4. `FOR KEY SHARE`
+  
+  in the **current** query level.
+  
+  > **explicit** means the SQL string contains these clauses. Postgres adds
+  > `RowMarkClause`s for subqueries, these clauses are NOT explicit. See
+  > the notes on `struct RowMarkClause`.
+  
+  See also:
+  
+  1. Notes on `struct RowMarkClause`
+  2. "13.3_Explicit_Locking.md"
+  3. https://www.postgresql.org/docs/current/explicit-locking.html#LOCKING-ROWS
+  
 
 * hasRowSecurity: rewriter has applied some row-level security policy 
 
