--- a/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -291,13 +291,14 @@
 
   > type: Expr or subtype, like BooleanExpr
 
-* targetList: a list of expr that define the query result
+* targetList: (List<TargetEntry>)
 
-  > List<TargetEntry>
+  > `targetList` is also called `tlist` in the pg source tree.
+
+  * For `SELECT`: a list of expr that define the query result
   
-  * For SELECT: projection, `*` is a special abbreviation that will be expaned
-    by the analyzer.
-    
+    `*` is a special abbreviation that will be expaned by the analyzer
+  
     ```c
     /*
      * transformTargetList()
@@ -312,9 +313,124 @@
 					ParseExprKind exprKind)
     ```
     
-  * INSERT 
-  * DELETE
-  * UPDATE
+  * For `INSEET`: the row that will be inserted into the table. During parser and 
+    analyzer stage, `targetList` only contains the columns that actually exist in
+    the SQL query. Rewriter and planer will normalize the `targetList` by:
+    
+    1. Add the `TargetEntry`s with default value for missing columns
+    2. Reorder `TargetEntry` entries so that they correspond to the column order
+    
+    ```c
+    rewriteTargetListIU() /* src/backend/rewrite/rewriteHandler.c */
+    preprocess_targetlist(root) /* src/backend/optimizer/plan/planner.c */ 
+    ```
+  
+    ```SQL
+    create table students (id int, name text, major text)
+    insert into students (name) values ('foo');
+    
+    -- NOTE: Before rewriter and planner
+    
+    :targetList (
+      {TARGETENTRY 
+        :expr 
+          {CONST 
+            :consttype 25 
+            :consttypmod -1 
+            :constcollid 100 
+            :constlen -1 
+            :constbyval false 
+            :constisnull false 
+            :location 36 
+            :constvalue 9 [ 36 0 0 0 98 105 110 103 111 ]
+          }
+          :resno 2 
+          :resname name 
+          :ressortgroupref 0 
+          :resorigtbl 0 
+          :resorigcol 0 
+          :resjunk false
+      }
+    )
+    
+    -- NOTE: after rewriter and planner
+    DETAIL:  (
+       {TARGETENTRY 
+       :expr 
+          {CONST 
+          :consttype 23 
+          :consttypmod -1 
+          :constcollid 0 
+          :constlen 4 
+          :constbyval true 
+          :constisnull true 
+          :location -1 
+          :constvalue <>
+          }
+       :resno 1 
+       :resname id 
+       :ressortgroupref 0 
+       :resorigtbl 0 
+       :resorigcol 0 
+       :resjunk false
+       }
+       {TARGETENTRY 
+       :expr 
+          {CONST 
+          :consttype 25 
+          :consttypmod -1 
+          :constcollid 100 
+          :constlen -1 
+          :constbyval false 
+          :constisnull false 
+          :location 36 
+          :constvalue 5 [ 20 0 0 0 97 ]
+          }
+       :resno 2 
+       :resname name 
+       :ressortgroupref 0 
+       :resorigtbl 0 
+       :resorigcol 0 
+       :resjunk false
+       }
+       {TARGETENTRY 
+       :expr 
+          {CONST 
+          :consttype 25 
+          :consttypmod -1 
+          :constcollid 100 
+          :constlen -1 
+          :constbyval false 
+          :constisnull true 
+          :location -1 
+          :constvalue <>
+          }
+       :resno 3 
+       :resname major 
+       :ressortgroupref 0 
+       :resorigtbl 0 
+       :resorigcol 0 
+       :resjunk false
+       }
+    )    
+    ```
+
+    
+  * For `UPDATE`: In analyzer, it represent the columns that will be updated. 
+    Rewriter merges entries with the same `resno`, the below query will have
+    2 `TargetEntry`ies with the same resno 1 as column `arr` gets modified
+    twice.
+    
+    ```sql
+    create table with_array (arr text[]);
+    update with_array set arr[1]='a', arr[2]='b';
+    ```
+    
+    Rewriter will merge the entires with the same `resno`
+    
+    Planner extracts resno
+  
+  * For `DELETE`
 
 * override: If this query contains a `OVERRIDING` clause. If so, what is its kind:
 
@@ -349,7 +465,11 @@
 
 * distinctClause: DISTINCT or DISTINCT ON clause
 
-* sortClause: ORDER BY
+* sortClause (List<SortGroupClause>): This list is 1-based
+
+  Representation of `ORDER BY, GROUP BY, PARTITION BY, DISTINCT, DISTINCT ON` items
+
+  ORDER BY/GROUP BY
 
 * limitOffset: OFFSET X
 
