--- a/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -313,7 +313,7 @@
 					ParseExprKind exprKind)
     ```
     
-  * For `INSEET`: the row that will be inserted into the table. During parser and 
+  * For `INSERT`: the row that will be inserted into the table. During parser and 
     analyzer stage, `targetList` only contains the columns that actually exist in
     the SQL query. Rewriter and planer will normalize the `targetList` by:
     
@@ -426,11 +426,12 @@
     update with_array set arr[1]='a', arr[2]='b';
     ```
     
-    Rewriter will merge the entires with the same `resno`
+    Rewriter will merge the entires with the same `resno`. The planner extracts
+    the `targetList` `resno` numbers into a separate "PlannerInfo.update_colnos"
+    (`preprocess_targetlist()`)
     
-    Planner extracts resno
-  
-  * For `DELETE`
+  * For `DELETE`: looks like this field is empty for `DELETE` statements from
+    my observations
 
 * override: If this query contains a `OVERRIDING` clause. If so, what is its kind:
 
