--- a/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -450,9 +450,30 @@
   > Postgres does not support `UPSERT` before 15, `ON CONFLICT DO` is an alternative 
   > to that
 
-* returningOldAlias
-* returningNewAlias
-* returningList
+* returningOldAlias (char *): NULL for `INSERT` as it does not have old value
+* returningNewAlias (char *): NULL for `DELETE` as it does not have new value
+* returningList (List<TargetEntry>)
+
+  The above 3 fields will only be set for `INSERT/UPDATE/DELETE/MERGE` statements
+  that can modify data and have `RETURNING` clauses. `returningOldAlias` is the alias
+  for the old data (before modification), `returningNewAlias` is for new data (after 
+  modification)
+  
+  ```SQL
+  create table foo (id int); 
+  delete from foo where id = 1 returning id;
+  ```
+  
+  When you specify a column in the `RETURNING` clause, `INSERT/UPDATE` by default
+  give you the new value, `DELETE` gives you the old value. `MERGE` gives you the
+  content of the source row plus the content of the inserted, updated, or deleted
+  target row.
+  
+  Users can specify `returningOldAlias` and `returningNewAlias` via:
+  
+  ```SQL
+  RETURNING WITH (OLD AS <old-alias>, NEW AS <new-alias>) <returningList>
+  ```
 
 * groupClause: `GROUP BY` clause
 
