--- a/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
+++ b/database/Postgres/pg_docs/Ch39_The_Rule_System/39.1_The_Query_Tree.md
@@ -51,7 +51,7 @@
 
 * hasWindowFuncs: if this query contains window functions in the target list
 
-* hasTargetSRF: if this query contains set-returning function
+* hasTargetSRFs (bool): if this query contains set-returning function
 
   > SRF: is postgres functions that could return multiple rows.
   >
@@ -416,7 +416,7 @@
     ```
 
     
-  * For `UPDATE`: In analyzer, it represent the columns that will be updated. 
+  * For `UPDATE`: In analyzer, it represents the columns that will be updated. 
     Rewriter merges entries with the same `resno`, the below query will have
     2 `TargetEntry`ies with the same resno 1 as column `arr` gets modified
     twice.
@@ -435,8 +435,15 @@
 
 * override: If this query contains a `OVERRIDING` clause. If so, what is its kind:
 
-  * OVERRIDING_USER_VALUE,
-	* OVERRIDING_SYSTEM_VALUE,
+  > [Postgres INSERT doc](https://www.postgresql.org/docs/current/sql-insert.html)
+  > 
+  > [How to insert value to identity column in PostgreSQL 11.1](https://stackoverflow.com/q/55701029/14092446)
+
+  * OVERRIDING_USER_VALUE: If this clause is specified, then any values supplied
+    for identity columns will override the default sequence-generated values.
+  * OVERRIDING_SYSTEM_VALUE: If this clause is specified, then any values supplied
+    for identity columns are ignored and the default sequence-generated values are
+    applied.
 
   ```sql
   INSERT INTO my_table (id, name) 
